# fde_assignment

./: README.md  RISK_IDENTIFICATION_RULES.md  pyproject.toml  requirements.txt
src/sut_payment/: __init__.py  app.py  cleaning.py  io.py  models.py  normalizers.py  quality.py  types.py
src/sut_payment/cleaners/: __init__.py  balances.py  campaigns.py  constants.py  partners.py  transactions.py  wallets.py
src/sut_payment/reconciliation/: __init__.py  engine.py  schemas.py  types.py
src/sut_payment/risk/: __init__.py  actions.py  ai_guidance.py  engine.py  schemas.py  severity.py  types.py
src/sut_payment/savings/: __init__.py  engine.py  schemas.py  strategy.py  types.py
